--- a/newmarkup.Rmd
+++ b/newmarkup.Rmd
@@ -2,7 +2,9 @@
 title: "New Markdown"
 author: "Gatya Gumilang"
 date: "2021/3/29"
-output: html_document
+output:
+  html_document:
+    keep_md: true
 ---
 
 ```{r setup, include=FALSE}
